--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "subvert"
-version = "0.1.0"
-authors = ["Johan Geluk <johan@geluk.io>"]
+version = "0.8.0"
+authors = ["Johan Geluk <johan.subvert@geluk.io>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nom = "5"
+nom = "7"
 regex = "1"
 anyhow = "1"
-clap = "2"
+clap = { version = "4", features = ["derive"] }
